[package]
name = "modbus_nostd"
version = "0.1.0"
authors = ["Miguel Pérez García <miguelpg_95@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.0.0"
managed = { version = "0.8.0", default-features = false }

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]